# chat-sdk-python

./: .coverage  .gitignore  .pyrefly-baseline.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  scan_async_iteration.py  scan_dict_access.py  scan_none_propagation.py  scan_slice_index.py  scan_truthiness.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  publish.yml  test-publish.yml  test.yml
docs/: ARCHITECTURE.md  DECISIONS.md  SECURITY.md  SELF_REVIEW.md  TESTING.md  UPSTREAM_SYNC.md
examples/: ai_tools_example.py
scripts/: audit_test_quality.py  fidelity_baseline.json  verify_test_fidelity.py
scripts/parser_spike/: benchmark.py
src/chat_sdk/: __init__.py  ai.py  callback_url.py  cards.py  channel.py  chat.py  emoji.py  errors.py  from_full_stream.py  logger.py  message_history.py  modals.py  plan.py  reviver.py  thread.py  thread_history.py  transcripts.py  types.py
src/chat_sdk/adapters/: __init__.py
src/chat_sdk/adapters/discord/: __init__.py  adapter.py  cards.py  format_converter.py  types.py
src/chat_sdk/adapters/github/: __init__.py  adapter.py  cards.py  format_converter.py  types.py
src/chat_sdk/adapters/google_chat/: __init__.py  adapter.py  cards.py  format_converter.py  thread_utils.py  types.py  user_info.py  workspace_events.py
src/chat_sdk/adapters/linear/: __init__.py  adapter.py  cards.py  format_converter.py  types.py
src/chat_sdk/adapters/messenger/: __init__.py  adapter.py  cards.py  format_converter.py  types.py
src/chat_sdk/adapters/slack/: __init__.py  adapter.py  cards.py  crypto.py  format.py  format_converter.py  modals.py  types.py
src/chat_sdk/adapters/slack/api/: __init__.py
src/chat_sdk/adapters/slack/blocks/: __init__.py  errors.py  input.py  limits.py  types.py
src/chat_sdk/adapters/slack/webhook/: __init__.py  parse.py  types.py  utils.py  verify.py
src/chat_sdk/adapters/teams/: __init__.py  adapter.py  bridge.py  cards.py  cards_input.py  format.py  format_converter.py  modals.py  streamer.py  types.py
src/chat_sdk/adapters/teams/api/: __init__.py
src/chat_sdk/adapters/teams/graph/: __init__.py
src/chat_sdk/adapters/teams/webhook/: __init__.py  continuation.py  parse.py  types.py
src/chat_sdk/adapters/telegram/: __init__.py  adapter.py  cards.py  format_converter.py  rich.py  types.py
src/chat_sdk/adapters/twilio/: __init__.py  adapter.py  api.py  cards.py  format_converter.py  thread.py  types.py  utils.py  voice.py  webhook.py
src/chat_sdk/adapters/whatsapp/: __init__.py  adapter.py  cards.py  format_converter.py  types.py
src/chat_sdk/ai/: __init__.py  messages.py  tools.py
src/chat_sdk/shared/: __init__.py  adapter_utils.py  base_format_converter.py  buffer_utils.py  card_utils.py  errors.py  markdown_parser.py  mock_adapter.py  streaming_markdown.py
src/chat_sdk/shared/parser_spike/: README.md  __init__.py  markdown_it_translator.py  marko_translator.py  mistune_translator.py
src/chat_sdk/state/: __init__.py  memory.py  postgres.py  redis.py
src/chat_sdk/testing/: __init__.py
tests/: conftest.py  test_adapter_api_url_config.py  test_ai.py  test_ai_tools.py  test_buffer_utils.py  test_callback_url.py  test_card_parity.py  test_cards.py  test_channel.py  test_channel_extended.py  test_channel_faithful.py  test_chat.py  test_chat_extended.py  test_chat_faithful.py  test_chat_resolver.py  test_coverage_gaps.py  test_critical_fixes.py  test_discord_adapter.py  test_discord_cards.py  test_discord_extended.py  test_discord_final.py  test_discord_format.py  test_dispatch_key_validation.py  test_emoji.py  test_emoji_parity.py  test_fixture_replay.py  test_from_full_stream.py  test_gchat_api.py  test_gchat_cards.py  test_gchat_comprehensive.py  test_gchat_format_extended.py  test_gchat_verification.py  test_gchat_webhook.py  test_gchat_webhook_extended.py  test_gchat_workspace_events.py  test_get_user_adapters.py  test_github_adapter.py  test_github_cards.py  test_github_dispatch.py  test_github_extended.py  (+94 more)
tests/fixtures/: conftest.py  copy_fixtures.py
tests/integration/: __init__.py  conftest.py  test_action_flow.py  test_assistant_threads.py  test_channel_ops.py  test_concurrency.py  test_dedup.py  test_dm_flow.py  test_mention_flow.py  test_reaction_flow.py  test_replay_actions_reactions.py  test_replay_assistant_threads.py  test_replay_callback_url.py  test_replay_channel.py  test_replay_discord.py  test_replay_dm.py  test_replay_events.py  test_replay_fetch_messages.py  test_replay_fetch_messages_discord.py  test_replay_fetch_messages_gchat.py  test_replay_fetch_messages_slack.py  test_replay_fetch_messages_teams.py  test_replay_mention.py  test_replay_modal.py  test_replay_modals_extended.py  test_replay_multi_workspace.py  test_replay_platforms.py  test_replay_reactions.py  test_replay_slash_command.py  test_replay_streaming.py  test_replay_whatsapp.py  test_slash_command_flow.py  test_subscription_flow.py
tests/parser_spike/: conftest.py  test_mdast_parity.py
tests/parser_spike/fixtures/: gap_cases.md  mixed_content.md
