[project]
name = "chat-sdk"
version = "0.4.26"
description = "Multi-platform async chat SDK for Python — port of Vercel Chat"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/Chinchill-AI/chat-sdk-python"
Repository = "https://github.com/Chinchill-AI/chat-sdk-python"
Issues = "https://github.com/Chinchill-AI/chat-sdk-python/issues"

[project.optional-dependencies]
slack = ["slack-sdk>=3.27.0"]
github = ["pyjwt[crypto]>=2.8"]
redis = ["redis>=5.0"]
postgres = ["asyncpg>=0.29"]
crypto = ["cryptography>=42.0"]
discord = ["pynacl>=1.5", "aiohttp>=3.9"]
teams = ["aiohttp>=3.9"]
telegram = ["aiohttp>=3.9"]
whatsapp = ["aiohttp>=3.9"]
google-chat = ["aiohttp>=3.9", "pyjwt[crypto]>=2.8", "google-auth>=2.0"]
linear = ["aiohttp>=3.9"]
all = [
    "slack-sdk>=3.27.0",
    "pyjwt[crypto]>=2.8",
    "redis>=5.0",
    "asyncpg>=0.29",
    "cryptography>=42.0",
    "pynacl>=1.5",
    "aiohttp>=3.9",
    "google-auth>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chat_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM", "UP"]

[dependency-groups]
dev = [
    "cryptography>=42.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "aiohttp>=3.9",
    "pyjwt[crypto]>=2.8",
    "ruff>=0.4.0",
    "pyrefly==0.61.1",
]

# ---------------------------------------------------------------------------
# Pyrefly type checker configuration
# ---------------------------------------------------------------------------
# Target: zero errors. Run:
#   uv run pyrefly check
# ---------------------------------------------------------------------------

[tool.pyrefly]
project-includes = ["src"]
project-excludes = ["**/__pycache__", "**/.pytest_cache"]

# Without disabling heuristics pyrefly skips src/ because of our layout.
disable-project-excludes-heuristics = true
use-ignore-files = false

python-version = "3.10"
python-platform = "linux"

# Optional adapter deps that aren't in the default install. Treating them as
# Any keeps pyrefly from flagging missing-import every time we lazy-load one.
replace-imports-with-any = [
    # Slack — covers top-level + submodule imports like slack_sdk.web.async_client
    "slack_sdk",
    "slack_sdk.*",
    # Discord — signed-request verification uses pynacl's nacl.signing
    "nacl",
    "nacl.*",
    # Google Chat — auth uses google.auth.* subpackages
    "google",
    "google.*",
    # State backends
    "redis",
    "redis.*",
    "asyncpg",
    "asyncpg.*",
    # HTTP clients used in lazy paths
    "httpx",
    "httpx.*",
    # GitHub App auth
    "jwt",
    "jwt.*",
]

[tool.pyrefly.errors]
# CI policy: zero pyrefly errors.
